# rust_tokio_server

./: README.md
rust_server/: .gitignore  Cargo.toml
rust_server/src/: handler.rs  main.rs  req.rs  resp.rs
rust_server/static/: index.html  link.html  script.js  styles.css
