[package]
name = "web_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.17", features = ["derive"] }
futures = "0.3.28"
maplit = "1.0.2"
tokio = { version = "1.27.0", features = ["full"] }
tokio-util = "0.7.8"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
